[gd_scene load_steps=13 format=2]

[ext_resource path="res://GFX/Enemies/sun1.png" type="Texture" id=1]
[ext_resource path="res://GFX/Enemies/sun2.png" type="Texture" id=2]
[ext_resource path="res://Enemies/MiniSun.gd" type="Script" id=3]
[ext_resource path="res://SFX/ImpactSFX/explosionCrunch_003.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/ImpactSFX/explosionCrunch_002.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "explode",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 57.2016

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 4.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75, 4 ),
"transitions": PoolRealArray( 1, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 4.75683, 3.13834 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1000 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1.27456, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "default", "attack", "default" ]
}

[sub_resource type="Animation" id=7]
resource_name = "explode"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 0.318641, 2.07053, 1, 0.267943 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "attack", "default", "explode" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.709804, 0.709804, 1 ), Color( 0.968627, 0.760784, 0.760784, 1 ), Color( 0.741176, 0.243137, 0.243137, 1 ), Color( 1, 0.709804, 0.709804, 1 ), Color( 0.741176, 0.243137, 0.243137, 1 ), Color( 1, 0.709804, 0.709804, 1 ), Color( 0.741176, 0.243137, 0.243137, 1 ), Color( 0.364706, 0.364706, 0.364706, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.25, 2 ),
"transitions": PoolRealArray( 1, 0.812252, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.223529 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.5 )
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer2D")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( -0.75 )
}

[sub_resource type="Animation" id=5]
resource_name = "wind_up"
length = 3.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1.25, 1.75, 2.25, 2.5, 2.75, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ), Vector2( 50, 0 ), Vector2( 0, 50 ), Vector2( -50, 0 ), Vector2( 0, -50 ), Vector2( 0, -50 ), Vector2( 0, -65 ), Vector2( 0, 0 ) ]
}

[node name="MiniSun" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.709804, 0.709804, 1 )
frames = SubResource( 1 )
animation = "attack"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Death = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/attack = SubResource( 4 )
anims/explode = SubResource( 7 )
anims/wind_up = SubResource( 5 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 3.0
bus = "SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
